--- a/index.html
+++ b/index.html
@@ -1,85 +1,92 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Home</title>
-        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script language="javascript" type="text/javascript" src="secret.js"></script>
+        <script src="secret.js"></script>
+        <script src="custom.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="topnav">
-            <a class="active" href="./index.html">Home</a>
-            <a href="./software.html">Software</a>
-            <a href="./livestream.html">Livestream</a>
-            <a href="./games.html">Games</a>
-            <a href="./monitoring.html" onclick="showAlert(); return false;">Status Page</a>
-            <script>
-                function showAlert() {
-                    Swal.fire({
-                        title: "Redirect",
-                        text: "You will be redirected to the UptimeRobot status page.",
-                        icon: "question",
-                        confirmButtonText: "Ok",
-                        confirmButtonColor: "#11b4d1",
-                        cancelButtonText: "No",
-                        showCancelButton: true,
-                        showCloseButton: true,
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            window.location.href = "./monitoring.html";
-                        }
-                    });
-                }
-            </script>  
+        <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="./software.html">Software</a></li>
+                <li class="nav-item"><a class="nav-link" href="./livestream.html">Livestream</a></li>
+                <li class="nav-item"><a class="nav-link" href="./games.html">Games</a></li>
+                <li class="nav-item"><a class="nav-link" href="./monitoring.html" onclick="showAlert(); return false;">Status Page</a></li>
+            </ul>
         </div>
-        <div class="header">
-            <h1>Welcome!</h1>
+        </nav>
+        <script>
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+        </script>
+        <header class="container-fluid custom-header">
+            <p><b>Welcome!</b></p>
             <p>Private Website</p>
-        </div>  
-        <div class="float-parent-element">
-            <div class="float-child-element">
-             <div class="blue">
-                <h1>Hi there my name is Johannes <br /> alias Joqar Sabon or Rick 👋</h1>
-                <p> 🔭 I’m currently working on my own projects</p>
-                <p> 🌱 I’m currently learning Java</p>
-                <p> 🤔 I’m looking for help with other programmers</p>
-                <p> 💬 Ask me about projects</p>
-                <p> 😄 Pronouns: He/Him</p>
-                <p> ⚡ Fun fact I'm a Furry</p>
-                <br />
-                <h2> 🏆 &nbsp; Github profile trophy</h2>
-                <p align="center"> <a href="https://github.com/ryo-ma/github-profile-trophy"><img src="https://github-profile-trophy.vercel.app/?username=joqarsabon&theme=light=ryo-ma&row=2&column=5" alt="joqarsabon" /></a> </p>
-                <h2>💬 &nbsp;Connect with me</h2>
-                <p align="center">
-                    <a href="https://github.com/JoqarSabon" target="blank"><img align="center" src="./pictures/github.png" alt="joqarsabon" height="40" width="40" /></a>    
-                    <a href="https://x.com/joqarsabon" target="blank"><img align="center" src="./pictures/twitter_x.png" alt="joqarsabon" height="40" width="40" /></a>
-                </p>
-                <br />
-                <h2> 🚀 &nbsp;Some Tools I Have Used and Learned</h2>
-                <p align="center"> 
-                <img src="./pictures/bash.svg" alt="bash" width="40" height="40"/>
-                <img src="./pictures/html.svg" alt="html5" width="40" height="40"/>
-                <img src="./pictures/css.svg" alt="css3" width="40" height="40"/>
-                <img src="./pictures/php.svg" alt="php" width="40" height="40"/> 
-                <img src="./pictures/python.svg" alt="python" width="40" height="40"/>
-                <img src="./pictures/docker-web.svg" alt="docker" width="40" height="40"/>
-                <img src="./pictures/chef.png" alt="Chef" width="40" height="40"/>
-                <img src="./pictures/git.svg" alt="git" width="40" height="40"/>
-                <img src="./pictures/gitlab.png" alt="Gitlab" width="40" height="40"/>
-                <img src="./pictures/prometheus.webp" alt="Prometheus" width="40" height="40"/> 
-                <img src="./pictures/grafana.svg" alt="grafana" width="40" height="40"/> 
-                <img src="./pictures/graylog.svg" alt="graylog" width="40" height="40"/>
-                <img src="./pictures/mariadb.svg" alt="mariadb" width="40" height="40"/> 
-                <img src="./pictures/mongodb.svg" alt="mongodb" width="40" height="40"/>
-                <img src="./pictures/unity.svg" alt="unity" width="40" height="40"/> 
-                <img src="./pictures/unreal.svg" alt="unreal" width="40" height="40"/> </p>
-                <br />
-                <h2> 🐞 &nbsp;I can fix your bugs</h2>
-                <img class="" src="./pictures/glitch.gif" width="500" height="500" />
-             </div>
-            </div>
-          </div>
+        </header>
+        <main class="blue py-5">
+            <div class="container text-center">
+                <h1>Hi there, my name is Johannes<br>alias Joqar Sabon or Rick 👋</h1>
+                <p>🔭 I’m currently working on my own projects</p>
+                <p>🌱 I’m currently learning Java</p>
+                <p>🤔 I’m looking for help with other programmers</p>
+                <p>💬 Ask me about projects</p>
+                <p>😄 Pronouns: He/Him</p>
+                <p>⚡ Fun fact: I'm a Furry</p>
+        <h2 class="mt-5">🏆 GitHub profile trophy</h2>
+        <div class="my-3">
+            <a href="https://github.com/ryo-ma/github-profile-trophy">
+                <img class="img-fluid" src="https://github-profile-trophy.vercel.app/?username=joqarsabon&theme=light&row=2&column=5" alt="joqarsabon">
+            </a>
+        </div>
+
+        <h2 class="mt-4">💬 Connect with me</h2>
+        <div class="d-flex justify-content-center my-3">
+            <a href="https://github.com/JoqarSabon" target="_blank">
+                <img src="./pictures/github.png" alt="GitHub" width="40" height="40" class="mx-2">
+            </a>
+            <a href="https://x.com/joqarsabon" target="_blank">
+                <img src="./pictures/twitter_x.png" alt="Twitter" width="40" height="40" class="mx-2">
+            </a>
+        </div>
+
+        <h2 class="mt-5">🚀 Some Tools I Have Used and Learned</h2>
+        <div class="d-flex flex-wrap justify-content-center tool-icons mt-4">
+            <img src="./pictures/bash.svg" data-toggle="tooltip" title="Bash" width="40" height="40" class="m-2">
+            <img src="./pictures/html.svg" data-toggle="tooltip" title="HTML" width="40" height="40" class="m-2">
+            <img src="./pictures/css.svg" data-toggle="tooltip" title="CSS" width="40" height="40" class="m-2">
+            <img src="./pictures/php.svg" data-toggle="tooltip" title="PHP" width="40" height="40" class="m-2">
+            <img src="./pictures/python.svg" data-toggle="tooltip" title="Python" width="40" height="40" class="m-2">
+            <img src="./pictures/docker_logo.webp" data-toggle="tooltip" title="Docker" width="40" height="40" class="m-2">
+            <img src="./pictures/chef.png" data-toggle="tooltip" title="Chef" width="40" height="40" class="m-2">
+            <img src="./pictures/git.svg" data-toggle="tooltip" title="Git" width="40" height="40" class="m-2">
+            <img src="./pictures/gitlab.png" data-toggle="tooltip" title="GitLab" width="40" height="40" class="m-2">
+            <img src="./pictures/prometheus.webp" data-toggle="tooltip" title="Prometheus" width="40" height="40" class="m-2">
+            <img src="./pictures/grafana.svg" data-toggle="tooltip" title="Grafana" width="40" height="40" class="m-2">
+            <img src="./pictures/graylog.svg" data-toggle="tooltip" title="Graylog" width="40" height="40" class="m-2">
+            <img src="./pictures/mariadb.svg" data-toggle="tooltip" title="MariaDB" width="40" height="40" class="m-2">
+            <img src="./pictures/mongodb.svg" data-toggle="tooltip" title="MongoDB" width="40" height="40" class="m-2">
+            <img src="./pictures/unity.svg" data-toggle="tooltip" title="Unity" width="40" height="40" class="m-2">
+            <img src="./pictures/unreal.svg" data-toggle="tooltip" title="Unreal Engine" width="40" height="40" class="m-2">
+        </div>
+
+        <h2 class="mt-5">🐞 I can fix your bugs</h2>
+        <img src="./pictures/glitch.gif" alt="Bug fixing" style="width: 100%; max-width: 500px; margin-top: 1rem;">
+        </div>
+    </main>
     </body>
 </html>
