--- a/livestream.html
+++ b/livestream.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Livestream</title>
         <meta charset="UTF-8"/>
+        <title>Livestream</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="custom.js"></script>
     </head>
     <body>
-        <div class="topnav">
-            <a href="./index.html">Home</a>
-            <a href="./software.html">Software</a>
-            <a class="active" href="./livestream.html">Livestream</a>
-            <a href="./games.html">Games</a>
-            <a href="./monitoring.html" onclick="showAlert(); return false;">Status Page</a>
-            <script>
-                function showAlert() {
-                    Swal.fire({
-                        title: "Redirect",
-                        text: "You will be redirected to the UptimeRobot status page.",
-                        icon: "question",
-                        confirmButtonText: "Ok",
-                        confirmButtonColor: "#11b4d1",
-                        cancelButtonText: "No",
-                        showCancelButton: true,
-                        showCloseButton: true,
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            window.location.href = "./monitoring.html";
-                        }
-                    });
-                }
-            </script>  
+    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav mr-auto">
+            <li class="nav-item" active><a class="nav-link" href="./index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="./software.html">Software</a></li>
+            <li class="nav-item active"><a class="nav-link" href="./livestream.html">Livestream</a></li>
+            <li class="nav-item"><a class="nav-link" href="./games.html">Games</a></li>
+            <li class="nav-item"><a class="nav-link" href="./monitoring.html" onclick="showAlert(); return false;">Status Page</a></li>
+            </ul>
         </div>
-            <h1 class="h">Lofi 24/7 Music Channel</h1>
-            <p class="h">vServer Linux</p>
-        <div class="streamz">
-            <iframe width="888" height="495" src="https://joqar-antmedia.de/LiveApp/play.html?id=rick" frameborder="0" allowfullscreen></iframe>
+    </nav>
+    <div class="container text-center my-5">
+        <h1 class="mb-3">🎧 Lofi 24/7 Music Channel</h1>
+        <p class="lead text-muted">vServer Linux</p>
+
+        <div class="streamz mt-4">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://joqar-antmedia.de/LiveApp/play.html?id=rick" allowfullscreen></iframe>
+            </div>
         </div>
+    </div>
     </body>
 </html>
