--- a/software.html
+++ b/software.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Software</title>
-        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="custom.js"></script>
     </head>
     <body>
-        <div class="topnav">
-            <a href="./index.html">Home</a>
-            <a class="active" href="./software.html">Software</a>
-            <a href="./livestream.html">Livestream</a>
-            <a href="./games.html">Games</a>
-            <a href="./monitoring.html" onclick="showAlert(); return false;">Status Page</a>
-            <script>
-                function showAlert() {
-                    Swal.fire({
-                        title: "Redirect",
-                        text: "You will be redirected to the UptimeRobot status page.",
-                        icon: "question",
-                        confirmButtonText: "Ok",
-                        confirmButtonColor: "#11b4d1",
-                        cancelButtonText: "No",
-                        showCancelButton: true,
-                        showCloseButton: true,
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            window.location.href = "./monitoring.html";
-                        }
-                    });
-                }
-            </script>  
+    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+                <li class="nav-item active"><a class="nav-link" href="./software.html">Software</a></li>
+                <li class="nav-item"><a class="nav-link" href="./livestream.html">Livestream</a></li>
+                <li class="nav-item"><a class="nav-link" href="./games.html">Games</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" onclick="showAlert(); return false;">Status Page</a></li>
+            </ul>
         </div>
-        <h1 class="h">Software projects</h1>
-        <div class="maincard">
-        <div class="card">
-            <img src="./pictures/calculator.png" alt="calculator" style="width:100%" height="400px">
-            <h1>Calculator</h1>
-            <p>A calculator that has been programmed in Visual Basic.
-            Download only for <b>Microsoft Windows</b></p>
-            <p><a href="./software/calculator.exe"><button>Download</button></a></p>
+    </nav>
+    <div class="container my-5">
+        <h1 class="text-center mb-5">🛠️ Software Projects</h1>
+        <div class="row">
+            <div class="col-md-6 mb-4">
+                <div class="card shadow-sm">
+                    <img src="./pictures/calculator.png" class="card-img-top" alt="calculator" style="height: 400px; width: 80%; margin-left: auto; margin-right: auto; padding-top: 5px;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><b>Calculator</b></h5>
+                        <p class="card-text">A calculator programmed in Visual Basic.<br>Download only for <b>Microsoft Windows</b>.</p>
+                        <a href="./software/calculator.exe" class="btn btn-primary btn-block">Download</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4">
+                <div class="card shadow-sm">
+                    <img src="./pictures/onion.png" class="card-img-top" alt="tor" style="height: 400px; width: 80%; margin-left: auto; margin-right: auto; padding-top: 5px;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><b>Tor-Webserver</b></h5>
+                        <p class="card-text">A GUI software (Selfhosting) to have a Tor .onion website.<br>Download for <b>Linux Ubuntu</b>.</p>
+                        <a href="https://github.com/JoqarSabon/tor-webserver-beta" class="btn btn-primary btn-block">Download</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 offset-md-3 mb-4">
+                <div class="card shadow-sm">
+                    <img src="./pictures/docker.png" class="card-img-top" alt="docker" style="height: 400px; object-fit: cover;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><b>Docker Tor-Webserver</b></h5>
+                        <p class="card-text">A Docker GUI software (Selfhosting) to have a Tor .onion website.<br>Download via <b>Docker Hub</b>.</p>
+                        <a href="https://hub.docker.com/r/joqarsabon/tordocker-webserver" class="btn btn-primary btn-block">Download</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="card">
-            <img src="./pictures/onion.png" alt="tor" style="width:100%" height="400px">
-            <h1>Tor-Webserver</h1>
-            <p>A GUI software (Selfhosting) to have a Tor .onion website.                  
-            Download only for <b>Linux Ubuntu</b></p>
-            <p><a href="https://github.com/JoqarSabon/tor-webserver-beta"><button >Download</button></a></p>
-        </div>
-        </div>
-        <div class="maincard2">
-        <div class="card" style="margin-top: 8%;">
-            <img src="./pictures/docker.png" alt="dockertor" style="width:100%" height="400px">
-            <h1>Docker Tor-Webserver</h1>
-            <p>A Docker GUI software (Selfhosting) to have a Tor .onion website.                  
-            Download over <b>Docker Hub</b></p>
-            <p><a href="https://hub.docker.com/r/joqarsabon/tordocker-webserver"><button >Download</button></a></p>
-        </div>
-        </div>
+    </div>
     </body>
 </html>
