css changes navbar

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </script>
         <header class="container-fluid custom-header">
             <p><b>Welcome!</b></p>
-            <p>Private Website</p>
+            <p>(Private Website)</p>
         </header>
         <main class="blue py-5">
             <div class="container text-center">
