--- a/software.html
+++ b/software.html
@@ -37,7 +37,7 @@
                     <img src="./pictures/calculator.png" class="card-img-top" alt="calculator" style="height: 400px; width: 80%; margin-left: auto; margin-right: auto; padding-top: 5px;">
                     <div class="card-body text-center">
                         <h5 class="card-title"><b>Calculator</b></h5>
-                        <p class="card-text">A simple calculator programmed in Visual Basic.<br>Download only for <b>Microsoft Windows</b>.</p>
+                        <p class="card-text">A simple calculator programmed in Visual Basic.<br>Download for <b>Microsoft Windows</b>.</p>
                         <a href="./software/calculator.exe" class="btn btn-primary btn-block">Download</a>
                     </div>
                 </div>
