--- a/livestream.html
+++ b/livestream.html
@@ -34,7 +34,7 @@
 
         <div class="streamz mt-4">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://joqar-antmedia.de/LiveApp/play.html?id=rick" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://joqar-antmedia.de/live/play.html?id=rick" allowfullscreen></iframe>
             </div>
         </div>
     </div>
