--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                 <p>💬 Ask me about projects</p>
                 <p>😄 Pronouns: He/Him</p>
                 <p>⚡ Fun fact: I'm a Furry</p>
-        <h2 class="mt-5">🏆 GitHub profile trophy</h2>
+        <!--<h2 class="mt-5">🏆 GitHub profile trophy</h2>
         <div class="my-3">
             <a href="https://github.com/ryo-ma/github-profile-trophy">
                 <img class="img-fluid" src="https://github-profile-trophy.vercel.app/?username=joqarsabon&theme=light&row=2&column=5" alt="joqarsabon">
             </a>
-        </div>
+        </div>-->
 
         <h2 class="mt-4">💬 Connect with me</h2>
         <div class="d-flex justify-content-center my-3">
